--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,6 @@ font-size: 20px ;
 margin-right: auto;
 margin-left: auto;
 
-
 }
 .carousel-item{
 height: 100vh;
@@ -37,16 +36,43 @@ min-height: 300px;
 background: no-repeat center center scroll;
 background-size: cover;
 }
-    
 
-
-
-
-
-.carousel-inner{
-    height: 100vh;
-    min-height: 300px;
-    background: no-repeat center center scroll;
-    background-size: cover;
+    /*segunda secction*/
+    /*quienes somos*/
+.texto{
+    text-align: center;
+    padding: 40px;
 }
+/*parrafos*/
+.parrafos{
+    display: flex;
+    border:5px; 
+    font-size: 15px;
+    border: 20px;
+}
+  /*icono*/
+.icono{
+    background-color:#3d3dda;
+     
     
+    
+}
+/*textos1,2,3*/
+.text1{
+    margin-left: 40px;
+    text-align: justify;
+}
+.text2{
+    margin: 40px;
+    text-align: center;
+    
+}
+.text3{
+    margin-right: 40px;
+    text-align: justify;
+}
+
+
+
+
+
