--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,13 @@
     padding: 0;
     top: 0;
 }
+body{
+    background-color: black;
+    color: white;
+}
+html{
+    scroll-behavior: smooth;
+}
 /*img*/
 .logo-viajechile{
     height:40px;
