--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,52 @@ background-size: cover;
     text-align: justify;
 }
 
+div div div ul li {
+    margin-top: 80px;
+    text-align: justify;
+    margin-left: auto;
+    margin-right: auto;
+    list-style: none;
+}
+#contacto {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    
+}
 
+.typeform-widget {
+    margin-bottom: 50px;
+}
+
+#rrss {
+    display: flex;
+    justify-content: right;
+    height: 70%;
+    
+}
+
+
+.flex-item {
+    padding: 10px;
+    width: 100%;
+    height: 50px;
+    list-style: none;
+    margin-top: 20px;
+    background-color: #328998;
+}
+
+.flex-item li i {
+    float: right;
+    color: #ffffff;
+    margin-right: 20px;
+}
+
+.logoText {
+    padding: 5px;
+    float: left;
+    color: #ffffff;
+}
 
 
 
