--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,11 +86,17 @@ div div div ul li {
     margin-right: auto;
     list-style: none;
 }
+
+/*formulario*/
 #contacto {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 30px;
-    
+    }
+.form-contenedor{
+    justify-content:center;
+    height: 70%;
+    margin: 30px;
 }
 
 #rrss {
