--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,9 @@ div div div ul li {
     margin-right: auto;
     list-style: none;
 }
+card-body{
+    
+}
 #contacto {
     text-align: center;
     margin-top: 50px;
