--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,8 +96,9 @@ div div div ul li {
     margin-top: 50px;
     margin-bottom: 30px;
     }
-.form-contenedor{
+.form-control{
     justify-content:center;
+    padding: 10px;
     height: 70%;
     margin: 30px;
 }
