--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ div div div ul li {
     margin-top: 50px;
     margin-bottom: 30px;
     }
-.form-control{
+.contenedor-form{
     justify-content:center;
     padding: 10px;
     height: 70%;
